# llm-nest-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_zh.md
.github/workflows/: ci.yml  release.yml
src/: api.rs  lib.rs  main.rs
src/cli/: app.rs  context.rs  mod.rs
src/cli/commands/: hub.rs  mod.rs  model.rs  run.rs  serve.rs
src/cli/ui/: output.rs
src/config/: i18n.rs  settings.rs
src/core/: mod.rs
src/core/models/: enums.rs  gguf.rs  mod.rs  model_info.rs
src/core/registry/: aliases.rs  manager.rs  mod.rs  search.rs
src/core/runtime/: backend.rs  config.rs  llama_cpp.rs  loader.rs  mod.rs
src/core/storage/: file_ops.rs  mod.rs  model_store.rs  paths.rs
src/hub/: download.rs  mod.rs  result.rs  search.rs
src/utils/: format.rs
tests/: integration_tests.rs  runtime_tests.rs
